--- a/riseup-vue2-vuetify/package.json
+++ b/riseup-vue2-vuetify/package.json
@@ -7,12 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.5.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
