--- a/expressjs_backend/package.json
+++ b/expressjs_backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "link-preview-js": "^2.1.6",
     "mongoose": "^5.11.18"
   },
   "devDependencies": {
